--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </tbody>
     </table>
   </div>
-  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
