--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </table>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
+  <script src="components/app.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
