--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
   <script src="components/app.js"></script>
+  <script src="components/grade-table.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
