Removed hard coded grade

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Student Grade Table</h1>
       </div>
       <div class="average col">
-        <h2>Average Grade <span class="badge badge-secondary">84</span></h2>
+        <h2>Average Grade <span class="badge badge-secondary"></span></h2>
       </div>
     </header>
     <table class="table table-striped">
