Changed CSS to mirror screenshot

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <header class="row border-bottom">
+    <header class="row">
       <div class="title col">
         <h1>Student Grade Table</h1>
       </div>
