Created grade-form.js and added to HTML

--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">@</span>
             </div>
-            <input type="text" class="form-control" placeholder="Student Name" aria-label="Student Name" aria-describedby="basic-addon1">
+            <input type="text" class="form-control" name="Name" placeholder="Student Name" aria-label="Student Name" aria-describedby="basic-addon1">
           </div>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon2">@</span>
             </div>
-            <input type="text" class="form-control" placeholder="Student Course" aria-label="Student Course"
+            <input type="text" class="form-control" name="Course" placeholder="Student Course" aria-label="Student Course"
               aria-describedby="basic-addon2">
           </div>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon3">@</span>
             </div>
-            <input type="text" class="form-control" placeholder="Student Grade" aria-label="Student Grade"
+            <input type="text" class="form-control" name="Grade" placeholder="Student Grade" aria-label="Student Grade"
               aria-describedby="basic-addon3">
           </div>
           <button type="submit" class="btn btn-success">Add</button>
@@ -81,6 +81,7 @@
   <script src="components/app.js"></script>
   <script src="components/grade-table.js"></script>
   <script src="components/page-header.js"></script>
+  <script src="components/grade-form.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
