Add column to table for Operations

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               <th scope="col">Student Name</th>
               <th scope="col">Course</th>
               <th scope="col">Grade</th>
+              <th scope="col">Operations</th>
             </tr>
           </thead>
           <tbody>
@@ -33,13 +34,16 @@
               <td></td>
               <td></td>
               <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
               <td></td>
             </tr>
             <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
               <td></td>
               <td></td>
               <td></td>
