--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             </tr>
           </tbody>
         </table>
+        <p class="d-none">No Grades Recorded</p>
       </div>
       <div class="col-sm-4">
         <h4 class="mb-4">Add Grade</h4>
