Add functionality to hide or show no grades paragraph

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </tr>
           </tbody>
         </table>
-        <p class="d-none">No Grades Recorded</p>
+        <p id="noGrades" class="d-none">No Grades Recorded</p>
       </div>
       <div class="col-sm-4">
         <h4 class="mb-4">Add Grade</h4>
