Added mobile responsiveness with Bootstrap and CSS

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
   <div class="container">
     <header class="row border-bottom">
-      <div class="title col">
+      <div class="title col-lg-6">
         <h1>Student Grade Table</h1>
       </div>
-      <div class="average col">
+      <div class="average col-lg-6">
         <h2>Average Grade <span class="badge badge-secondary" id="grade"></span></h2>
       </div>
     </header>
     <div class="row">
-      <div class="col-sm-8">
+      <div class="col-lg-8">
         <table class="table table-striped">
           <thead>
             <tr>
@@ -52,7 +52,7 @@
         </table>
         <p id="noGrades" class="d-none">No Grades Recorded</p>
       </div>
-      <div class="col-sm-4">
+      <div class="col-lg-4">
         <h4 class="mb-4">Add Grade</h4>
         <form action="" method="post">
           <div class="input-group mb-3">
