--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <th scope="col">Student Name</th>
               <th scope="col">Course</th>
               <th scope="col">Grade</th>
-              <th scope="col">Operations</th>
+              <th scope="col text-right">Operations</th>
             </tr>
           </thead>
           <tbody>
@@ -54,25 +54,25 @@
       </div>
       <div class="col-lg-4">
         <h4 class="mb-4">Add Grade</h4>
-        <form action="" method="post">
+        <form>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
             </div>
-            <input type="text" class="form-control" name="Name" placeholder="Student Name" aria-label="Student Name" aria-describedby="basic-addon1">
+            <input type="text" class="form-control" id="studentName" name="Name" placeholder="Student Name" aria-label="Student Name" aria-describedby="basic-addon1">
           </div>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon2"><i class="far fa-list-alt"></i></span>
             </div>
-            <input type="text" class="form-control" name="Course" placeholder="Student Course" aria-label="Student Course"
+            <input type="text" class="form-control" id="studentCourse" name="Course" placeholder="Student Course" aria-label="Student Course"
               aria-describedby="basic-addon2">
           </div>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon3"><i class="fas fa-graduation-cap"></i></span>
             </div>
-            <input type="text" class="form-control" name="Grade" placeholder="Student Grade" aria-label="Student Grade"
+            <input type="text" class="form-control" id="studentGrade" name="Grade" placeholder="Student Grade" aria-label="Student Grade"
               aria-describedby="basic-addon3">
           </div>
           <button type="submit" class="btn btn-success">Add</button>
